--- a/src/containers/StartPage.module.css
+++ b/src/containers/StartPage.module.css
@@ -18,5 +18,9 @@
     flex-grow: 1;
     flex-direction: column;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: center;
+}
+
+.startBtn {
+    margin-top: 15vh
 }
