--- a/src/containers/Exercises.module.css
+++ b/src/containers/Exercises.module.css
@@ -5,3 +5,21 @@
     border-radius: 5px;
     border-style: none;
 }
+
+.exercise {
+    height: fit-content;
+    margin: 10px;
+}
+
+.exerciseContainer {
+    display: flex;
+    flex-wrap: wrap;
+    align-content: flex-start;
+    margin: 1vh 0 1vh 0;
+    border-radius: 5px;
+    height: 20vh;
+    width: 75vw;
+    background-color: rgba(0, 0, 0, 0.185);
+    overflow-y: auto;
+    font-size: 0.75em;
+}
