Change button widths

--- a/src/components/NegativeButton.module.css
+++ b/src/components/NegativeButton.module.css
@@ -4,7 +4,7 @@
     border-radius: 10px;
     border-style: none;
     height: 5vh;
-    width: 20vw;
+    width: fit-content;
     letter-spacing: 0.2vw;
     font-size: 3vh;
 }
