--- a/src/containers/RunningPage.module.css
+++ b/src/containers/RunningPage.module.css
@@ -5,11 +5,22 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
     font-size: calc(10px + 3vmin);
     color: white;
 }
 
-.stopBtn {
+.interactionBar {
     margin-top: 15vh;
+    width: 50vw;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.title {
+    font-size: calc(40px + 8vmin);
+}
+
+.timer {
+    font-size: calc(100px + 15vmin);
 }
