--- a/src/components/PositiveButton.module.css
+++ b/src/components/PositiveButton.module.css
@@ -3,10 +3,10 @@
     background-color: rgba(89, 138, 95, 0.719);
     border-radius: 10px;
     border-style: none;
-    height: 5vh;
     width: fit-content;
     letter-spacing: 0.2vw;
-    font-size: 3vh;
+    font-size: 10vh;
+    box-shadow: 5px 5px rgba(0, 0, 0, 0.2);
 }
 
 .posBtn:hover {
