--- a/src/containers/ConfigPage.module.css
+++ b/src/containers/ConfigPage.module.css
@@ -5,23 +5,18 @@
     color: white;
     display: flex;
     flex-direction: column;
-    align-items: center;
     text-align: center;
 }
 
 .title {
     font-size: calc(40px + 8vmin);
-    margin-top: 2vh;
+    margin: 2vh 1vh 0 1vh;
 }
 
 .content {
     display: flex;
-    flex-grow: 1;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-}
-
-.startBtn {
-    margin-top: 10vh;
+    flex: 1;
+    justify-content: space-evenly;
 }
