--- a/src/containers/TimeSettings.module.css
+++ b/src/containers/TimeSettings.module.css
@@ -1,7 +1,9 @@
 .input {
     padding: 1vh;
-    width: 50vw;
+    width: 80vw;
     text-align: center;
     border-radius: 5px;
     border-style: none;
+    margin: 1vh 0 1vh 0;
+    box-shadow: 5px 5px rgba(0, 0, 0, 0.2);
 }
