--- a/src/containers/Exercises.module.css
+++ b/src/containers/Exercises.module.css
@@ -1,4 +1,5 @@
 .input {
+    font-family: 'Raleway';
     padding: 1vh;
     width: 85vw;
     text-align: center;
@@ -10,11 +11,11 @@
 
 .exercise {
     height: fit-content;
-    margin: 10px;
+    padding: 1vh;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    flex-basis: 27%;
+    flex-basis: 50%;
 }
 
 .exercise:hover {
