--- a/src/components/buttons/NeutralButton.module.css
+++ b/src/components/buttons/NeutralButton.module.css
@@ -1,5 +1,5 @@
 .neutralButton {
-    border-radius: 0.25em;
+    border-radius: 10px;
     color: white;
     background-color: rgb(255, 255, 255, 0.2);
     border-style: none;
