Update routes through app

--- a/src/containers/ConfigPage.module.css
+++ b/src/containers/ConfigPage.module.css
@@ -42,3 +42,9 @@
     pointer-events: all;
     opacity: 1;
 }
+
+.navigation {
+    width: 75vw;
+    display: flex;
+    justify-content: space-evenly;
+}
