--- a/src/components/buttons/NeutralButton.module.css
+++ b/src/components/buttons/NeutralButton.module.css
@@ -12,9 +12,19 @@
 }
 
 .neutralButton:active {
-    background-color: rgba(89, 138, 95, 0.1);
+    background-color: rgb(255, 255, 255, 0.15);
 }
 
 .icon {
     margin: auto !important;
+}
+
+.disabledBtn {
+    border-radius: 10px;
+    color: white;
+    background-color: rgb(255, 255, 255, 0.1);
+    border-style: none;
+    box-shadow: 5px 5px rgba(0, 0, 0, 0.2);
+    padding: 1vh;
+    opacity: 0.25;
 }
