--- a/src/components/NumberInput.module.css
+++ b/src/components/NumberInput.module.css
@@ -14,3 +14,10 @@
     justify-content: space-between;
     margin: 2vh;
 }
+
+.unit {
+    position: absolute;
+    color: rgba(0, 0, 0, 0.5);
+    transform: translate(-250%, 50%);
+    font-size: 1em;
+}
