--- a/src/containers/Exercises.module.css
+++ b/src/containers/Exercises.module.css
@@ -16,13 +16,21 @@
     align-items: center;
 }
 
+.exercises {
+    height: 60vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
 .exercise {
     height: fit-content;
-    padding: 1vh;
+    padding: 2vh;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    flex-basis: 50%;
+    text-align: left;
+    width: 50%;
 }
 
 .exercise:hover {
@@ -36,11 +44,10 @@
 .exerciseContainer {
     display: flex;
     flex-wrap: wrap;
-    align-content: flex-start;
-    justify-content: center;
+    flex-direction: column;
     margin: 1vh 0 1vh 0;
     border-radius: 5px;
-    height: 20vh;
+    height: 45vh;
     width: 85vw;
     background-color: rgba(0, 0, 0, 0.185);
     overflow-y: auto;
