--- a/src/containers/WelcomePage.module.css
+++ b/src/containers/WelcomePage.module.css
@@ -16,3 +16,24 @@
 .body {
     font-size: 2em;
 }
+
+.content {
+    flex: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.settings {
+    align-self: flex-end;
+    margin: 0 1em 1em 0;
+}
+
+.settings:hover {
+    cursor: pointer;
+}
+
+.next {
+    width: fit-content;
+    align-self: center;
+}
