--- a/src/components/modals/EditModal.module.css
+++ b/src/components/modals/EditModal.module.css
@@ -12,6 +12,13 @@
     height: 50vh;
     border-radius: 10px;
     box-shadow: 5px 5px rgba(0, 0, 0, 0.8);
+    animation-name: modalFadeIn;
+    animation-duration: 0.5s;
+}
+
+@keyframes modalFadeIn {
+    from { transform: translate(-50%, -70%); opacity: 0; z-index: -1; }
+    to { transform: translate(-50%, -50%); opacity: 1; z-index: 100; }
 }
 
 .hideModal {
