--- a/src/components/modals/SettingsModal.module.css
+++ b/src/components/modals/SettingsModal.module.css
@@ -1,17 +1,25 @@
 .showModal {
+    opacity: 1;
     display: flex;
     flex-direction: column;
     position: absolute;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    opacity: 1;
     background: rgba(70, 70, 70, 0.95);
     border-style: none;
     width: 80vw;
     height: 60vh;
     border-radius: 10px;
     box-shadow: 5px 5px rgba(0, 0, 0, 0.8);
+    animation-name: modalFadeIn;
+    animation-duration: 0.5s; 
+    z-index: 100;   
+}
+
+@keyframes modalFadeIn {
+    from { transform: translate(-50%, -70%); opacity: 0; z-index: -1; }
+    to { transform: translate(-50%, -50%); opacity: 1; z-index: 100; }
 }
 
 .hideModal {
