--- a/src/containers/WelcomePage.module.css
+++ b/src/containers/WelcomePage.module.css
@@ -36,4 +36,19 @@
 .next {
     width: fit-content;
     align-self: center;
+    z-index: 10;
+}
+
+.backdrop {
+    background-color: rgba(0, 0, 0, 0.678);
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    animation-name: fadeIn;
+    animation-duration: 0.5s
+}
+
+@keyframes fadeIn {
+    from { opacity: 0 }
+    to {opacity: 1 }
 }
