--- a/src/containers/settings/ExerciseSettingsPage.module.css
+++ b/src/containers/settings/ExerciseSettingsPage.module.css
@@ -18,6 +18,13 @@
     height: 100%;
     width: 100%;
     position: fixed;
+    animation-name: fadeIn;
+    animation-duration: 0.5s;
+}
+
+@keyframes fadeIn {
+    from { opacity: 0 }
+    to {opacity: 1 }
 }
 
 .content {
