--- a/src/components/Countdown.module.css
+++ b/src/components/Countdown.module.css
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-evenly;
     font-size: calc(10px + 3vmin);
     color: white;
 }
