--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 body {
+  overflow: hidden;
   background-color: #282c34;
   margin: 0;
   font-family: "Raleway", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
