Add radial counter option to settings

--- a/src/components/modals/SettingsModal.module.css
+++ b/src/components/modals/SettingsModal.module.css
@@ -45,8 +45,8 @@
 }
 
 .setting {
-    width: 75vw;
+    width: 70vw;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
 }
